[package]
name = "seisreinas2"
version = "0.1.0"
authors = ["Fabian Montero <fabian@cluster451.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.16.3"
itertools = "0.10.0"
lazy_static = "1.4.0"

[profile.release]
lto = true
